--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  font-family: arial;
+  font-family: Helvetica;
   font-size: 17px;
   color: #fff;
   line-height: 1.6;
@@ -25,30 +25,20 @@ body {
   padding: 0 20px;
 }
 
-#showcase::before {
-  //to fade background image
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
 #showcase h1 {
   position: relative;
   color: yellow;
+  text-shadow: 3px 3px 5px black;
   font-size: 50px;
   line-height: 1.2;
 }
 #showcase p {
   position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
 }
 
 #buttons {
-  position: relative;
   margin: 10px;
   padding: 10px;
 }
@@ -56,9 +46,10 @@ body {
   font-size: 18px;
   text-decoration: none;
   color: yellow;
-  border: yellow 1px solid;
+  border: yellow 2px solid;
   padding: 10px 20px;
   border-radius: 10px;
+  text-shadow: 2px 2px 8px black;
 }
 #showcase .btn:hover {
   background: black;
